--- a/Classifier/models_folder/models.config
+++ b/Classifier/models_folder/models.config
@@ -1,6 +1,7 @@
-model_config_list {
-    config {
-        name: 'superclassifier'
-        base_path: '/models/superclassifier/'
-    }
+model_config_list: {
+  config: {
+    name: 'superclassifier',
+    base_path: '/models/superclassifier',
+    model_platform: "tensorflow"
+  }
 }
