enabling advanced view in the dashboard

--- a/Classifier/models_folder/models.config
+++ b/Classifier/models_folder/models.config
@@ -1,7 +1,7 @@
 model_config_list: {
   config: {
-    name: 'superclassifier',
-    base_path: '/models/superclassifier',
+    name: 'DNP_final',
+    base_path: '/models/DNP_final',
     model_platform: "tensorflow"
   }
 }
