initial update to new classifier

--- a/Classifier/models_folder/models.config
+++ b/Classifier/models_folder/models.config
@@ -1,7 +1,17 @@
 model_config_list: {
   config: {
-    name: 'DNP_final',
-    base_path: '/models/DNP_final',
+    name: 'SUPERCLASS',
+    base_path: '/models/SUPERCLASS',
+    model_platform: "tensorflow"
+  }
+  config: {
+    name: 'CLASS',
+    base_path: '/models/CLASS',
+    model_platform: "tensorflow"
+  }
+  config: {
+    name: 'PATHWAY',
+    base_path: '/models/PATHWAY',
     model_platform: "tensorflow"
   }
 }
