--- a/.github/workflows/productionintegration.yml
+++ b/.github/workflows/productionintegration.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
+        pip install pandas
     - name: Test with pytest
       run: |
         pip install nose2
